# simple-python-library

./: CODEOWNERS  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  ci_cd.yml  pr.yml
src/simple_python_library/: __init__.py  utils.py
test/: test_utils.py
