[project]
name = "simple-python-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mj4oss", email = "mjws4oss@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
simple-python-library = "simple_python_library:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
